fixed video player on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -42,4 +42,20 @@ $max-content-width: {{ site.max_width }};
   width: 100%;
   height: 100%;
 }
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#sim2realVid {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 30%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
 
